# paper_figure_extractor

./: .gitignore  LOCAL_USAGE.md  README.md  SKILL.md  prompt.txt
tools/paperfig/: pyproject.toml
tools/paperfig/paperfig/: __init__.py  api.py  arxiv_source.py  cli.py  export.py  fetch.py  journal_html.py  latex_parser.py  models.py  panel_split.py  pdf_extract.py  verify.py
tools/paperfig/tests/: test_export.py  test_html_parser.py  test_latex_parser.py  test_verify.py
tools/paperfig/tests/fixtures/sample_source/: main.tex
