[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfig"
version = "0.1.0"
description = "Evidence-based scientific paper figure extraction with strict provenance."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.0",
  "pillow>=10.0",
  "pydantic>=2.6",
  "pymupdf>=1.24",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
paperfig = "paperfig.cli:app"

[tool.setuptools.packages.find]
include = ["paperfig*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
